--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AERPAW Cellular Logger</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="build_date">Build Date: %1$s</string>
 </resources>
